tests/NormalTests/paczka1/small_fuzzy/14777854.err
Error in line 9: ZrA3t S535 69,8
Error in line 4: 36scwl S186 47,3
